# argocd-grpc

./: Cargo.toml  build.rs
src/: client.rs  lib.rs  models.rs
src/proto/: mod.rs
