[package]
name = "argocd-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "0.12", features = ["tls"] }
tonic-web = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15.7"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http2", "native-tokio"] }
rustls = { version = "0.23", features = ["ring"] }
http = "1.4.2"


[build-dependencies]
tonic-build = "0.12"
reqwest = { version = "0.12", features = ["blocking"] }
ureq = { version = "3", features = ["socks-proxy", "charset"] }

